UX: Ensure bottom of usernames/names are never cut off

--- a/assets/stylesheets/assigns.scss
+++ b/assets/stylesheets/assigns.scss
@@ -107,6 +107,7 @@
       font-size: $font-down-1;
       grid-area: names;
       overflow: hidden;
+      line-height: normal;
     }
     .assign-name {
       @include ellipsis;
